--- a/UserManagementAPI/UserManagementAPI/appsettings.json
+++ b/UserManagementAPI/UserManagementAPI/appsettings.json
@@ -22,10 +22,10 @@
         "IV": "YourSecretKeyHeremyameisDivyanshChauahnbutiamSdirect123"
     },
     "EmailSettings": {
-        "From": "divyanshchauhan2002@gmail.com",
+        "From": "put your mail here",
         "StmpServer": "smtp.gmail.com",
         "Port": 587,
-        "Username": "divyanshchauhan2002@gmail.com",
-        "Password": "gbca ovdh imry rmor"
+        "Username": "put your mail here",
+        "Password": " sample@123"
     }
 }
